<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label1"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="6dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063" />

        <Button
            android:id="@+id/botaoIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="iniciaJogo"
            android:text="@string/botaoIniciarJogo"
            android:visibility="visible"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="168dp" />

        <Button
            android:id="@+id/botaoSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sairJogo"
            android:text="@string/botaoSair"
            android:visibility="visible"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="251dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>